# PhysicsStruct

./: .gitignore  LICENSE  README.md  pyproject.toml
src/PhysicsStruct/: PhysicsStruct.py  VectorSpace3D.py  __init__.py
src/Physics_struct/: __init__.py
