[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PhysicsStruct"
version = "1.1.0"
authors = [
  { name="Whaly-w", email="whalyforwork@gmail.com" },
]
description = "A set of classes for physcis variables"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/whaly-w/PhysicsStruct"